fix textwrap bug on navbar activity title when translating

--- a/app/assets/stylesheets/application/_navigation.css.sass
+++ b/app/assets/stylesheets/application/_navigation.css.sass
@@ -13,6 +13,9 @@
   .navbar-inner
     background: none
     color: $white
+    .navbar-activity-title
+      .navbar-text
+        width: 200px
   .navbar .nav > li > a
     padding: 10px
     color: $white
